tests/NormalTests/paczka1/small_fuzzy/50931696.err
Error in line 1: 4FwbmZrsH S561 87,9
Error in line 4: S86 S561 29,1
Error in line 7: JXylk9 S86 39,1
